--- a/src/UI/Medicine_list.form
+++ b/src/UI/Medicine_list.form
@@ -90,7 +90,7 @@
         <Component class="javax.swing.JTable" name="listTable">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {&#xa;    },&#xa;    new String [] {&#xa;        &quot;No.&quot;, &quot;&#xe1a;&#xe32;&#xe23;&#xe4c;&#xe42;&#xe04;&#xe4a;&#xe14;&quot;, &quot;&#xe0a;&#xe37;&#xe48;&#xe2d;&#xe22;&#xe32;&quot;, &quot;&quot;&#xa;    }&#xa;)" type="code"/>
+              <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {&#xa;    },&#xa;    new String [] {&#xa;        &quot;No.&quot;, &quot;&#xe1a;&#xe32;&#xe23;&#xe4c;&#xe42;&#xe04;&#xe4a;&#xe14;&quot;, &quot;&#xe0a;&#xe37;&#xe48;&#xe2d;&#xe22;&#xe32;&quot;, &quot;&#xe40;&#xe25;&#xe02;&#xe17;&#xe30;&#xe40;&#xe1a;&#xe35;&#xe22;&#xe19;&#xe22;&#xe32;&quot;, &quot;&#xe02;&#xe19;&#xe32;&#xe14;&quot;, &quot;&#xe23;&#xe32;&#xe04;&#xe32;&#xe02;&#xe32;&#xe22;&quot;, &quot;&#xe17;&#xe35;&#xe48;&#xe2d;&#xe22;&#xe39;&#xe48;&#xe2a;&#xe15;&#xe4a;&#xe2d;&#xe01;&quot;, &quot;&#xe1b;&#xe23;&#xe30;&#xe40;&#xe20;&#xe17;&quot;&#xa;    }&#xa;)" type="code"/>
             </Property>
           </Properties>
         </Component>
